--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -2,73 +2,82 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/GameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Game">
 
     <Button
-        android:="@+id/button@"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:layout_width="200dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:id="@+id/button1"
         android:text=":)" />
 
     <Button
-        android:="@+id/button@"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_width="200dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:id="@+id/button2"
         android:text=":)" />
 
     <Button
-        android:="@+id/button@"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:layout_width="200dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:id="@+id/button3"
         android:text=":)" />
 
     <Button
-        android:="@+id/button@"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_width="200dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:id="@+id/button4"
         android:text=":)" />
 
     <Button
-        android:="@+id/button@"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:layout_width="200dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:id="@+id/button5"
         android:text=":)" />
 
     <Button
-        android:="@+id/button@"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_width="200dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:id="@+id/button6"
         android:text=":)" />
 
     <Button
-        android:="@+id/button@"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:layout_width="200dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:id="@+id/button7"
         android:text=":)" />
 
     <Button
-        android:="@+id/button@"
-        android:layout_gravity="right"
         android:layout_width="200dp"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_weight="1"
+        android:id="@+id/button8"
         android:text=":)" />
+
+    <TextView
+        android:id="@+id/gamescoretv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SCORE: "
+        />
+
 
 </LinearLayout>
