--- a/app/src/main/res/layout/activity_wmtitle_screen.xml
+++ b/app/src/main/res/layout/activity_wmtitle_screen.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_weight=".5"
         android:gravity="center"
-        android:text="Title" />
+        android:text="Wack-A-Creeper" />
 
     <ImageView
         android:layout_width="match_parent"
