--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -8,76 +8,102 @@
     android:orientation="vertical"
     tools:context=".Game">
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+
+    <ImageButton
+        android:id="@+id/creeperbutton1"
+        android:layout_width="44dp"
+        android:layout_height="50dp"
         android:layout_gravity="left"
         android:layout_weight="1"
-        android:id="@+id/button1"
-        android:text=":)" />
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="30dp"
+        android:src="@drawable/creeperleft" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:layout_width="44dp"
+        android:layout_height="50dp"
         android:layout_gravity="right"
         android:layout_weight="1"
-        android:id="@+id/button2"
-        android:text=":)" />
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="-50dp"
+        android:id="@+id/creeperbutton2"
+        android:src="@drawable/creeperright" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+
+    <ImageButton
+        android:layout_width="44dp"
+        android:layout_height="50dp"
         android:layout_gravity="left"
         android:layout_weight="1"
-        android:id="@+id/button3"
-        android:text=":)" />
+        android:layout_marginTop="-50dp"
+        android:layout_marginLeft="30dp"
+        android:id="@+id/creeperbutton3"
+        android:src="@drawable/creeperleft" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/creeperbutton4"
+        android:layout_width="44dp"
+        android:layout_height="50dp"
         android:layout_gravity="right"
+        android:layout_marginTop="-50dp"
+        android:layout_marginRight="30dp"
         android:layout_weight="1"
-        android:id="@+id/button4"
-        android:text=":)" />
+        android:src="@drawable/creeperright" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:layout_width="44dp"
+        android:layout_height="50dp"
         android:layout_gravity="left"
         android:layout_weight="1"
-        android:id="@+id/button5"
-        android:text=":)" />
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="-50dp"
+        android:id="@+id/creeperbutton5"
+        android:src="@drawable/creeperleft" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+    
+    <ImageButton
+        android:layout_width="44dp"
+        android:layout_height="50dp"
         android:layout_gravity="right"
         android:layout_weight="1"
-        android:id="@+id/button6"
-        android:text=":)" />
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="-50dp"
+        android:id="@+id/creeperbutton6"
+        android:src="@drawable/creeperright" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+    
+    <ImageButton
+        android:layout_width="44dp"
+        android:layout_height="50dp"
         android:layout_gravity="left"
         android:layout_weight="1"
-        android:id="@+id/button7"
-        android:text=":)" />
-
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="-50dp"
+        android:id="@+id/creeperbutton8"
+        android:src="@drawable/creeperleft" />
+        
+        
+      
+        
+        
+        <ImageButton
+        android:layout_width="44dp"
+        android:layout_height="50dp"
         android:layout_gravity="right"
         android:layout_weight="1"
-        android:id="@+id/button8"
-        android:text=":)" />
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="-50dp"
+        android:id="@+id/creeperbutton7"
+        android:src="@drawable/creeperleft" />   <!---->
+
 
     <TextView
         android:id="@+id/gamescoretv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SCORE: "
-        />
+        android:text="SCORE: " />
+
+
 
 
 </LinearLayout>
