--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -6,104 +6,96 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/grassy"
     tools:context=".Game">
 
 
     <ImageButton
         android:id="@+id/creeperbutton1"
         android:layout_width="44dp"
-        android:layout_height="50dp"
+        android:layout_height="75dp"
         android:layout_gravity="left"
-        android:layout_weight="1"
-        android:layout_marginTop="0dp"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="4dp"
+        android:layout_weight="1"
         android:src="@drawable/creeperleft" />
 
     <ImageButton
-        android:layout_width="44dp"
-        android:layout_height="50dp"
-        android:layout_gravity="right"
-        android:layout_weight="1"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="-50dp"
         android:id="@+id/creeperbutton2"
+        android:layout_width="44dp"
+        android:layout_height="75dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="-0dp"
+        android:layout_marginRight="30dp"
+        android:layout_weight="1"
         android:src="@drawable/creeperright" />
 
-
     <ImageButton
-        android:layout_width="44dp"
-        android:layout_height="50dp"
-        android:layout_gravity="left"
-        android:layout_weight="1"
-        android:layout_marginTop="-50dp"
-        android:layout_marginLeft="30dp"
         android:id="@+id/creeperbutton3"
-        android:src="@drawable/creeperleft" />
+        android:layout_width="55dp"
+        android:layout_height="140dp"
+        android:layout_gravity="left"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="-0dp"
+        android:layout_weight="1"
+        android:src="@drawable/creeperleft2" />
+
 
     <ImageButton
         android:id="@+id/creeperbutton4"
-        android:layout_width="44dp"
-        android:layout_height="50dp"
+        android:layout_width="66dp"
+        android:layout_height="120dp"
         android:layout_gravity="right"
-        android:layout_marginTop="-50dp"
+        android:layout_marginTop="-0dp"
         android:layout_marginRight="30dp"
         android:layout_weight="1"
-        android:src="@drawable/creeperright" />
+        android:src="@drawable/creeperrighttoo" />
 
-    <ImageButton
-        android:layout_width="44dp"
-        android:layout_height="50dp"
-        android:layout_gravity="left"
-        android:layout_weight="1"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="-50dp"
+    <!-- <ImageButton
         android:id="@+id/creeperbutton5"
-        android:src="@drawable/creeperleft" />
-
-    
-    <ImageButton
-        android:layout_width="44dp"
-        android:layout_height="50dp"
-        android:layout_gravity="right"
-        android:layout_weight="1"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="-50dp"
-        android:id="@+id/creeperbutton6"
-        android:src="@drawable/creeperright" />
-
-    
-    <ImageButton
-        android:layout_width="44dp"
-        android:layout_height="50dp"
+        android:layout_width="77dp"
+        android:layout_height="215dp"
         android:layout_gravity="left"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="0dp"
         android:layout_weight="1"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="-50dp"
-        android:id="@+id/creeperbutton8"
-        android:src="@drawable/creeperleft" />
-        
-        
-      
-        
-        
-        <ImageButton
-        android:layout_width="44dp"
-        android:layout_height="50dp"
-        android:layout_gravity="right"
-        android:layout_weight="1"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="-50dp"
-        android:id="@+id/creeperbutton7"
-        android:src="@drawable/creeperleft" />   <!---->
+        android:src="@drawable/creeperleft3" /> -->
 
+    <ImageButton
+        android:id="@+id/creeperbutton8"
+        android:layout_width="66dp"
+        android:layout_height="180dp"
+        android:layout_gravity="left"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="-0dp"
+        android:layout_weight="1"
+        android:src="@drawable/creeperleft3" />
+
+    <ImageButton
+          android:layout_width="44dp"
+          android:layout_height="50dp"
+          android:layout_gravity="right"
+          android:layout_weight="1"
+          android:layout_marginRight="120dp"
+          android:layout_marginTop="-0dp"
+          android:id="@+id/creeperbutton7"
+          android:src="@drawable/creeperright3" />
+
+
+    <ImageButton
+        android:id="@+id/creeperbutton6"
+        android:layout_width="66dp"
+        android:layout_height="175dp"
+        android:layout_gravity="left"
+        android:layout_marginTop="-0dp"
+        android:layout_marginLeft="30dp"
+        android:layout_weight="1"
+        android:src="@drawable/creeperleft3" />
 
     <TextView
         android:id="@+id/gamescoretv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SCORE: " />
-
-
-
 
 </LinearLayout>
