--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -16,8 +16,8 @@
         android:layout_height="75dp"
         android:layout_gravity="left"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="4dp"
         android:layout_weight="1"
+        android:background="@android:color/transparent"
         android:src="@drawable/creeperleft" />
 
     <ImageButton
@@ -28,68 +28,78 @@
         android:layout_marginTop="-0dp"
         android:layout_marginRight="30dp"
         android:layout_weight="1"
+        android:background="@android:color/transparent"
         android:src="@drawable/creeperright" />
 
     <ImageButton
         android:id="@+id/creeperbutton3"
         android:layout_width="55dp"
-        android:layout_height="140dp"
+        android:layout_height="130dp"
         android:layout_gravity="left"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="-0dp"
         android:layout_weight="1"
+        android:background="@android:color/transparent"
         android:src="@drawable/creeperleft2" />
 
 
     <ImageButton
         android:id="@+id/creeperbutton4"
         android:layout_width="66dp"
-        android:layout_height="120dp"
+        android:layout_height="110dp"
         android:layout_gravity="right"
         android:layout_marginTop="-0dp"
         android:layout_marginRight="30dp"
         android:layout_weight="1"
+        android:background="@android:color/transparent"
         android:src="@drawable/creeperrighttoo" />
 
-    <!-- <ImageButton
+    <ImageButton
         android:id="@+id/creeperbutton5"
-        android:layout_width="77dp"
-        android:layout_height="215dp"
+        android:layout_width="55dp"
+        android:layout_height="140dp"
         android:layout_gravity="left"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="0dp"
         android:layout_weight="1"
-        android:src="@drawable/creeperleft3" /> -->
-
-    <ImageButton
-        android:id="@+id/creeperbutton8"
-        android:layout_width="66dp"
-        android:layout_height="180dp"
-        android:layout_gravity="left"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="-0dp"
-        android:layout_weight="1"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
         android:src="@drawable/creeperleft3" />
 
     <ImageButton
-          android:layout_width="44dp"
-          android:layout_height="50dp"
-          android:layout_gravity="right"
-          android:layout_weight="1"
-          android:layout_marginRight="120dp"
-          android:layout_marginTop="-0dp"
-          android:id="@+id/creeperbutton7"
-          android:src="@drawable/creeperright3" />
+        android:id="@+id/creeperbutton8"
+        android:layout_width="60dp"
+        android:layout_height="170dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="-0dp"
+        android:layout_marginRight="24dp"
+        android:layout_weight="1"
+        android:background="@android:color/transparent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/creeperleft3" />
+
+    <ImageButton
+        android:id="@+id/creeperbutton7"
+        android:layout_width="66dp"
+        android:layout_height="140dp"
+        android:layout_gravity="left"
+        android:layout_marginTop="-0dp"
+        android:layout_marginLeft="24dp"
+        android:layout_weight="1"
+        android:background="@android:color/transparent"
+        android:src="@drawable/creeperleft3" />
 
 
     <ImageButton
         android:id="@+id/creeperbutton6"
         android:layout_width="66dp"
-        android:layout_height="175dp"
-        android:layout_gravity="left"
-        android:layout_marginTop="-0dp"
+        android:layout_height="165dp"
+        android:layout_gravity="right"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="-0dp"
         android:layout_weight="1"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
         android:src="@drawable/creeperleft3" />
 
     <TextView
