we be getting close but they dont need to be perching perfectly... fixed a typo in optionsxml

--- a/app/src/main/res/layout/options.xml
+++ b/app/src/main/res/layout/options.xml
@@ -25,7 +25,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Chose your game mode:" />
+        android:text="Choose your game mode:" />
 
     <Spinner
         android:layout_width="match_parent"
